--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@ai-sdk/openai": "^1.2.1",
     "@ai-sdk/react": "^1.1.21",
     "@ai-sdk/ui-utils": "^1.1.17",
+    "@cloudflare/puppeteer": "^0.0.14",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
